# excel-opus-py-converter

opus-excel-vba-py-converter/: .env.example  .gitignore  FEATURES_UPDATE.md  README.md  app.py  config.py  create_actuarial_xlsm.py  data_exporter.py  formula_extractor.py  llm_converter.py  offline_converter.py  pyproject.toml  requirements.txt  streamlit_app.py  vba_extractor.py  workbook_analyzer.py
opus-excel-vba-py-converter/.github/: copilot-instructions.md
opus-excel-vba-py-converter/docs/: Claude.md  agents.md  skills.md
opus-excel-vba-py-converter/static/css/: styles.css
opus-excel-vba-py-converter/static/js/: app.js
opus-excel-vba-py-converter/templates/: index.html
opus-excel-vba-py-converter/tests/: _vba_project_builder.py  generate_actuarial_workbook.py
opus-excel-vba-py-converter/tests/sample_files/vba_modules/: LossReserving.bas  MortalityFunctions.bas  PremiumCalculations.bas  RiskMetrics.bas  ThisWorkbook.bas  clsPolicy.cls
